# kerr-rt

./: .gitignore  AGENTS.md  BACKGROUND_DNGR_PLAN.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PIPELINE_OVERVIEW.md  PROJECT.md  PROJECT_MAP.md  README.md  REMAINING_WORK_PLAN.md  guid.md  pdf.md  pyproject.toml  pyrightconfig.json  tip.md  블랙홀_렌더러_발표.pptx
.claude/agents/: research-scout.md  research-synthesizer.md  source-validator.md
.claude/workflows/: directory-review-parallel.js
.codex/: config.toml
Open_Source_Repository/paper/: 1104.5499v3.md  1303.5057v1.md  1502.03808v2.md  1902.11196v1.md  1972ApJ...178.md  1974ApJ...191.md  II-48.md  SYNTHESIS.md  paper.md
Open_Source_Repository/paper/_intermediate/flash/: 1303.5057v1.md  1502.03808v2.md  1902.11196v1.md  1972ApJ-178.md  1974ApJ-191.md  II-48.md
Open_Source_Repository/paper/_intermediate/sonnet/: 1303.5057v1.md  1502.03808v2.md  1902.11196v1.md  1972ApJ-178.md  1974ApJ-191.md  II-48.md  _II-48_part3_notes.md
configs/: render.yaml
docs/plans/: 2026-06-16-pillar2-multiphase-implementation.md  2026-06-19-pillar3-scattering-implementation.md
docs/specs/: 2026-06-06-dngr-artifact-remediation.md  2026-06-13-V1-self-shadow-source-function.md  2026-06-13-disk-noise-turbulence.md  2026-06-13-volumetric-disk-and-gas-flow.md  2026-06-14-V2-flared-3d-density.md  2026-06-14-V2-vertical-self-shadow.md  2026-06-14-V3-curl-domain-warp.md  2026-06-14-V3.1-curl-flow-advection.md  2026-06-16-cinematic-volumetric-multiphase-scattering-design.md  2026-06-20-P1-shear-cascade-design.md  2026-06-20-P1-shear-cascade-plan.md  2026-06-20-P4-P5-edge-erosion-lod-cascade-plan.md  2026-06-20-P4-P5-edge-erosion-lod-cascade.md
research/: README.md
research/accretion-disk/: SEED.md  STATUS.md  search-log-E.md  search-log.md  search-log.txt  sources-fluid-mhd.md  sources-gr-lensing.md  sources-procedural-noise.md  sources-spectral-color.md  sources-vfx-pipeline.md  validation-procedural-noise.md
scripts/: README_ingest_stars.md  _uv_sweep.py  check_starless_map.py  export_exr.py  gpu_test.py  hero_4k.py  ingest_stars.py  no_disk_blackhole.jpg_original  regrade.py  seam_diag.py  seam_diagnostics.py  showcase_disk.py  test_pipe_a.py  thumb.py
skills/kerr-physics/: SKILL.md
src/blender/: export_camera.py
src/renderer/: __init__.py  disk.py  disk_flux.py  geodesic.py  kerr_params.py  metric.py  noise.py  starmap.py  taichi_renderer.py
tests/: cuda_smoke_test.py  test_disk_edge_erosion.py  test_disk_flare.py  test_disk_flux.py  test_disk_lod.py  test_disk_multiphase.py  test_disk_noise.py  test_disk_scatter.py  test_disk_self_shadow.py  test_disk_shear_cascade.py  test_disk_source_function.py  test_disk_step_convergence.py  test_geodesic.py  test_gpu_regression.py  test_ingest_stars.py  test_kerr_params.py  test_noise.py  test_noise_gpu.py  test_starfield_artifacts.py  test_starfield_dngr.py  test_starmap.py
tests/test_geodesic/: test_conserved_quantities_regression.csv
