[project]
name = "kerr-black-hole-renderer"
version = "0.1.0"
description = "Offline renderer for a Kerr black hole (Taichi geodesic tracer + Blender pipeline)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "pytest-regressions>=2.5",
    "pandas>=2.0",
    "pillow>=10.0",
    # Phase 2 (Taichi GPU tracer). taichi 1.7.4 is the version confirmed working
    # on the RTX 5060 (sm_120 / Blackwell) via CUDA JIT — see CLAUDE.md.
    "taichi==1.7.4",
    # OpenEXR 3.x: multi-part EXR output (beauty + disk parts) and starmap read.
    "openexr>=3.0",
    # OpenImageIO: preferred 16K starmap loader. If no Windows wheel resolves for
    # this Python version, we fall back to reading the starmap via openexr.
    "openimageio",
]

# This repo is a src-layout workspace, not a distributable wheel. Tell uv not to
# try to build/install it as a package; tests pick up `renderer` via pythonpath.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]  # scripts/ exposes ingest_stars transforms for tests
markers = [
    "gpu: GPU/CUDA regression tests; skipped automatically when CUDA is unavailable",
]

# Dev tooling only — not runtime deps. Install with `uv sync` (uv installs the
# default group automatically) or `uv run --group dev ...`.
[dependency-groups]
dev = ["ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    # Vendored third-party reference renderers — not our code, never linted.
    "Open_Source_Repository",
    # Frozen, numerically-validated physics references (see CLAUDE.md): the CPU
    # ground truth the GPU port is checked against. Never reformatted or auto-fixed.
    "src/renderer/metric.py",
    "src/renderer/geodesic.py",
    "src/renderer/disk.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = [
    # `l` is the Kerr-Schild null covector lₐ — standard GR notation used verbatim
    # from skills/kerr-physics/SKILL.md; renaming would diverge from the formulas.
    "E741",
]
